# sgflow

./: LICENSE  README.md  meson.build
include/: result.h  sgflow.h
protocol/: meson.build
src/: layer.c  main.c  result.c
ui/: .gitignore  sgflow.gresource.xml  sgflow.ui  sgflow_multi_result.ui
